# suslang

./: Cargo.toml  LICENSE  README.md  TODO.md
.github/: ci.yaml
.github/workflows/: ci.yml  lint.yml
ast/: Cargo.toml
ast/src/: lib.rs  parser.rs  test.rs
ast/src/parser/: expr.rs  stmt.rs
cli/: Cargo.toml
parse/: Cargo.toml
parse/src/: ast.rs  expr.rs  lib.rs  parser.rs  stmt.rs  test.rs
parse/src/ast/: base.rs  test.rs
parse/src/expr/: arith.rs  block.rs  cond.rs  test.rs
parse/src/expr/test/: arith_test.rs  block_test.rs  cond_test.rs
parse/src/parser/: expr.rs
parse/src/stmt/: decl.rs  expr.rs  test.rs
sem/: Cargo.toml
sem/src/: test.rs
tokenize/: Cargo.toml
tokenize/src/: lib.rs  test.rs  tokens.rs
