[workspace]
name = "suslang"
version = "0.0.1"
edition = "2024"
description = "Ameteur attempt at making an interpreter"
rust-version = "1.85.0"
categories = ["compilers", "command-line-utilities"]
keywords = ["interpreter"]
readme = "./README.md"
repository = "https://github.com/nguyenhuy0905/suslang"
license-file = "./LICENSE"
publish = false
members = ["tokenize", "cli"]

[dependencies]

[lints.clippy]
cargo = {level = "warn", priority = 3}
deprecated = "deny"
pedantic = {level = "warn", priority = -1}
complexity = {level = "warn", priority = 2}
style = {level = "warn", priority = 1}
