[workspace]
members = ["parse", "tokenize"]
resolver = "3"

[workspace.package]
description = "Ameteur attempt at making an interpreter"
version = "0.0.1"
rust-version = "1.85.0"
readme = "./README.md"
repository = "https://github.com/nguyenhuy0905/suslang"
edition = "2024"
license-file = "./LICENSE"
publish = false

[workspace.lints.clippy]
cargo = {level = "warn", priority = -1}
pedantic = {level = "warn", priority = -1}
complexity = {level = "warn", priority = -1}
style = {level = "warn", priority = -1}

[workspace.lints.rust]
deprecated = "deny"
