[package]
name = "sem"
description.workspace = true
version.workspace = true
rust-version.workspace = true
readme.workspace = true
repository.workspace = true
edition.workspace = true
license-file.workspace = true
publish.workspace = true

[dependencies]
tokenize = { path = "../tokenize" }
parse = { path = "../parse" }

[lints]
workspace = true
